Add a feature to report issues

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -9,6 +9,6 @@
 		"message": "Ansicht Hintergrundbild"
 	},
 	"failure": {
-		"message": "Konnte nicht das Hintergrundbild zu bekommen."
+		"message": "Konnte nicht das Hintergrundbild zu bekommen.\nProblem melden?"
 	}
 }
