--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -9,6 +9,6 @@
 		"message": "View Background Image"
 	},
 	"failure": {
-		"message": "Failed to get the background image."
+		"message": "Failed to get the background image.\nReport an issue?"
 	}
 }
