--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,14 +1,17 @@
 {
-    "extDescription": {
-        "message": "'Просмотр фонового изображения' в контекстном меню."
-    },
     "extName": {
-        "message": "Просмотр фонового изображения"
+        "message": "Открыть фоновое изображение"
+    },
+    "extDescription": {
+        "message": "\"Открыть фоновое изображение\" в контекстном меню."
+    },
+    "title": {
+        "message": "Открыть фоновое изображение"
+    },
+    "reload": {
+        "message": "Перезагрузите вкладку."
     },
     "failure": {
         "message": "Не удалось получить фоновое изображение.\nЖелаете сообщить о проблеме?"
-    },
-    "title": {
-        "message": "Просмотр фонового изображения"
     }
 }
