--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -1,14 +1,17 @@
 {
-    "extDescription": {
-        "message": "'Перегляд фонового зображення' в контекстному меню."
-    },
     "extName": {
-        "message": "Перегляд фонового зображення"
+        "message": "Переглянути зображення тла"
+    },
+    "extDescription": {
+        "message": "\"Переглянути зображення тла\" в контекстному меню."
+    },
+    "title": {
+        "message": "Переглянути зображення тла"
+    },
+    "reload": {
+        "message": "Перезавантажте вкладку."
     },
     "failure": {
         "message": "Не вдалося отримати фонове зображення.\nБажаєте повідомити про помилку?"
-    },
-    "title": {
-        "message": "Перегляд фонового зображення"
     }
 }
