--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -3,10 +3,13 @@
         "message": "背景画像を表示"
     },
     "extDescription": {
-        "message": "コンテキストメニューに「背景画像だけを表示」項目を追加します。"
+        "message": "右クリックメニューに「背景画像を表示」を追加します。"
     },
     "title": {
-        "message": "背景画像だけを表示"
+        "message": "背景画像を表示"
+    },
+    "reload": {
+        "message": "タブを再読み込みしてください。"
     },
     "failure": {
         "message": "背景画像を取得できません。\n問題を報告しますか？"
