Show errors on security pages

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "Zobrazit obrázek na pozadí"
     },
+    "security": {
+        "message": "Rozšíření na této stránce nefunguje z bezpečnostních důvodů."
+    },
     "reload": {
         "message": "Znovu načtěte kartu."
     },
