--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "View Background Image"
     },
+    "security": {
+        "message": "The extension does not work on this page for security reasons."
+    },
     "reload": {
         "message": "Please reload the tab."
     },
