--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "背景画像を表示"
     },
+    "security": {
+        "message": "セキュリティ上の理由のため、このページ上では実行できません。"
+    },
     "reload": {
         "message": "タブを再読み込みしてください。"
     },
