--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "Открыть фоновое изображение"
     },
+    "security": {
+        "message": "Расширение не работает на этой странице по соображениям безопасности."
+    },
     "reload": {
         "message": "Перезагрузите вкладку."
     },
