--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "Переглянути зображення тла"
     },
+    "security": {
+        "message": "Розширення на цій сторінці не працює з міркувань безпеки."
+    },
     "reload": {
         "message": "Перезавантажте вкладку."
     },
