--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "查看背景图像"
     },
+    "security": {
+        "message": "出于安全原因，该扩展名不适用于此页面。"
+    },
     "reload": {
         "message": "请重新加载标签。"
     },
