--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "Hintergrundgrafik anzeigen"
     },
+    "security": {
+        "message": "Die Erweiterung funktioniert auf dieser Seite aus Sicherheitsgründen nicht."
+    },
     "reload": {
         "message": "Bitte Lade die Registerkarte neu."
     },
