--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "배경 이미지 보기"
     },
+    "security": {
+        "message": "보안상의 이유로 확장 프로그램이이 페이지에서 작동하지 않습니다."
+    },
     "reload": {
         "message": "탭을 다시로드하십시오."
     },
