--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "Pokaż obraz tła"
     },
+    "security": {
+        "message": "Rozszerzenie nie działa na tej stronie ze względów bezpieczeństwa."
+    },
     "reload": {
         "message": "Załaduj kartę ponownie."
     },
