--- a/src/_locales/pt_BR/messages.json
+++ b/src/_locales/pt_BR/messages.json
@@ -8,6 +8,9 @@
     "title": {
         "message": "Ver imagem de fundo"
     },
+    "security": {
+        "message": "A extensão não funciona nesta página por motivos de segurança."
+    },
     "reload": {
         "message": "Por favor, recarregue a aba."
     },
