--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -3,7 +3,7 @@
     "message": "背景画像を表示"
   },
   "extDescription": {
-    "message": "右クリックメニューに「背景画像を表示」を追加します。"
+    "message": "コンテキストメニューに「背景画像を表示」を追加します。"
   },
   "feedback": {
     "message": "評価"
@@ -12,12 +12,15 @@
     "message": "寄付"
   },
   "security": {
-    "message": "セキュリティ上の理由のため、このページ上では実行できません。"
+    "message": "拡張機能は特殊なページ上では許可されていません。"
   },
   "reload": {
-    "message": "タブを再読み込みしてください。"
+    "message": "拡張機能のインストールとアップデートの後はページを再読み込みしてください。"
   },
   "failure": {
-    "message": "背景画像を取得できません。"
+    "message": "背景画像を表示できません"
+  },
+  "report": {
+    "message": "問題を報告しますか？"
   }
 }
