--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -12,7 +12,7 @@
     "message": "寄付"
   },
   "security": {
-    "message": "拡張機能は特殊なページ上では許可されていません。"
+    "message": "拡張機能は特殊なページ上では実行を許可されていません。"
   },
   "reload": {
     "message": "拡張機能のインストールとアップデートの後はページを再読み込みしてください。"
